[gd_scene load_steps=8 format=3 uid="uid://sdu84e21pqhk"]

[ext_resource type="Script" path="res://languageScrn.gd" id="1_mgejr"]
[ext_resource type="Texture2D" uid="uid://40p6gl6xf6jq" path="res://thesisProjectAssets/background.jpg" id="1_wfw2c"]
[ext_resource type="Texture2D" uid="uid://cxwsrl0n682kh" path="res://thesisProjectAssets/gmeLogo.png" id="3_ptlcx"]
[ext_resource type="Texture2D" uid="uid://bq7fjnjf4t8qc" path="res://thesisProjectAssets/enFlg.PNG" id="4_cxpxc"]
[ext_resource type="FontFile" uid="uid://dpkqwlvqf0myv" path="res://fonts/ShadowsIntoLight-Regular.ttf" id="4_hcohl"]
[ext_resource type="Texture2D" uid="uid://ceph8436iemyf" path="res://thesisProjectAssets/esFlag.PNG" id="5_5nrql"]
[ext_resource type="Texture2D" uid="uid://ev50kfnw6r4d" path="res://thesisProjectAssets/danFlg.PNG" id="6_1kexp"]

[node name="Node" type="Node"]
script = ExtResource("1_mgejr")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.360784)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_wfw2c")
expand_mode = 1

[node name="TextureRect2" type="TextureRect" parent="."]
offset_left = 464.0
offset_top = 39.0
offset_right = 633.0
offset_bottom = 160.0
texture = ExtResource("3_ptlcx")
expand_mode = 1

[node name="Label" type="Label" parent="."]
offset_left = 402.0
offset_top = 152.0
offset_right = 731.0
offset_bottom = 217.0
theme_override_fonts/font = ExtResource("4_hcohl")
theme_override_font_sizes/font_size = 18
text = "Choose Language"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureButton" type="TextureButton" parent="."]
offset_left = 504.0
offset_top = 227.0
offset_right = 607.0
offset_bottom = 289.0
texture_normal = ExtResource("4_cxpxc")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureButton2" type="TextureButton" parent="."]
offset_left = 498.0
offset_top = 311.0
offset_right = 621.0
offset_bottom = 395.0
texture_normal = ExtResource("5_5nrql")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureButton3" type="TextureButton" parent="."]
offset_left = 493.0
offset_top = 406.0
offset_right = 629.0
offset_bottom = 498.0
texture_normal = ExtResource("6_1kexp")
ignore_texture_size = true
stretch_mode = 0

[connection signal="pressed" from="TextureButton" to="." method="_on_eng_pressed"]
[connection signal="pressed" from="TextureButton2" to="." method="_on_texture_button_2_pressed"]
[connection signal="pressed" from="TextureButton3" to="." method="_on_dk_pressed"]
